# terraform-module-simple-gha-runner-gce

./: LICENSE  README.md  data.tf  locals.tf  main.tf  outputs.tf  variables.tf
src/: main.py  pyproject.toml  requirements.txt
