[project]
name = "gha-webhook"
version = "0.0.1"
description = "gha-webhook"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "functions-framework>=3.9.2",
    "google-cloud-compute-v1beta>=0.2.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-secret-manager>=2.25.0",
    "pyjwt[crypto]>=2.10.1",
]
